# wyc6k-task-runner

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  docker-compose.yaml  pyproject.toml
marvin/: __main__.py  awsclients.py  context.py  credentials.py  definitions.py  functions.py  models.py  runner.py  settings.py  worker.py
marvin/adapters/: __init__.py  base.py  batch_adapter.py  factory.py  fargate_adapter.py  lambda_adapter.py
marvin/llm/: __init__.py  anthropic_client.py  base.py  definitions.py  factory.py  gemini_client.py  ollama_client.py  openai_client.py
marvin/memory/: models.py  summarizer.py
marvin/tools/: __init__.py  base.py  builtin.py  coding.py  registry.py
marvin_manager/: __main__.py  context.py  rate_limiter.py  runner.py  worker.py
marvin_manager/llm/: __init__.py  anthropic_client.py  definitions.py  factory.py  gemini_client.py  ollama_client.py  openai_client.py
marvin_manager/tools/: __init__.py  builtin.py  coding.py  registry.py
mrvn/accounts/: admin.py  models.py  services.py
mrvn/accounts/migrations/: 0002_customer.py  0003_customer_github_token.py  0004_customer_credential.py
mrvn/accounts/tests/: test_credentials.py  test_customer_fk.py  test_models.py
mrvn/agents/: admin.py  context.py  models.py  runner.py  serializers.py  services.py  views.py
mrvn/agents/migrations/: 0006_agent_customer.py  0006_customer.py  0007_project_context.py  0008_agent_context_window_messages.py
mrvn/agents/tests/: test_coding_tools.py  test_context.py  test_project_context.py  test_runner.py  test_s3_memory_write_tool.py  test_tool_execution.py  test_tool_validation.py
mrvn/agents/tools/: builtin.py  coding.py  s3_memory.py
mrvn/channels/: models.py
mrvn/channels/migrations/: 0002_chatroom_customer.py  0002_customer.py
mrvn/commons/: functions.py  github.py  models.py
mrvn/commons/management/commands/: onboard.py
mrvn/memory/: admin.py  apps.py  models.py  partitioning.py  search.py  signals.py
mrvn/memory/migrations/: 0005_customer.py  0005_repartition_embeddingchunk_by_customer_agent.py  0005_session_customer.py  0005_session_project_context_customer.py  0006_repartition_by_customer_agent.py  0006_session_project_context.py
mrvn/memory/tests/: test_partitioning.py  test_search_isolation.py  test_signals.py
mrvn/mrvn/: settings.py
mrvn/tasks/: admin.py  models.py
mrvn/tasks/management/commands/: run_task_consumer.py
mrvn/tasks/migrations/: 0001_initial.py
mrvn/tasks/tests/: test_models.py  test_run_task_consumer.py
tests/: test_adapters.py  test_context.py  test_credentials.py  test_models.py  test_runner.py  test_summarizer.py  test_tools.py
